Consolidate and rename agents for consistency
- Merged React agents: react-component-architect + react-nextjs-expert → react-engineer
- Merged Database agents: database-reviewer + postgres-expert → database-engineer (supports PostgreSQL & MySQL)
- Renamed agents for consistency:
  - python-developer → python-engineer
  - typescript-backend-expert → typescript-engineer
  - elixir-backend-expert → elixir-engineer
  - github-issue-manager → github-manager
  - jira-ticket-manager → jira-manager
- Updated project-manager with:
  - TodoWrite template with agent delegation examples
  - Improved project templates for agentic workflow
  - Fixed redundant delegations
- Fixed README duplicates and added missing agents
- Updated all cross-references throughout codebase

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>